# Vulkan-Mandelbrot-Generator

./: .gitignore  CMakeLists.txt
shaders/: comp.spv  compile.sh  shader.comp
src/: Openmp_mandelbrot_generator.cpp  Openmp_mandelbrot_generator.hpp  Vulkan_mandelbrot_generator.cpp  Vulkan_mandelbrot_generator.hpp  benchmark.cpp  lodepng.cpp  lodepng.h  mandelbrot.cpp  mandelbrot_cpu.cpp  mandelbrot_gpu.cpp
